--- a/nginx.conf
+++ b/nginx.conf
@@ -2,7 +2,7 @@ worker_processes auto;
 events {}
 stream {
     upstream backend {
-        server https://india-844345243814.europe-west1.run.app:8080;
+        server 213.108.23.89:22;
     }
     server {
         listen 8080;
